src/Styles/Hero/NewVideos.css
.hero-label-list_next {
    display: flex;
    flex-direction: column;
    text-align: left;
    margin: 0px 4px;
}

.up-next-div-container {
    background-image: linear-gradient(180deg, rgb(31, 31, 31) 0%, transparent 30%);
}

.up-next_label-text {
    font-weight: 700;
    font-size: 1.3rem;
    color: rgb(255, 208, 0);
    margin-bottom: 20px;
}

.grid-container-next_vid {
    display: grid;
    grid-template-columns: auto 300px;
    padding: 0px 16px;
}

.side-slider-poster {
    margin-top: 16px;

}

.side-slider-poster>img {
    width: 90px;
    height: 135px;
    object-fit: cover;
    border-radius: 20px;
}

.next-video_data-div {
    display: flex;
    justify-content: end;
    flex-direction: column;
    padding: 0 8px;
    padding-top: 18px;
}

.next_vid_length {
    display: flex;
    margin-bottom: 10px;
}

.next_vid_length>svg {
    transform: scale(1.3);
}

.slide-caption-play-icon-next {
    width: 25px;
    margin-right: 6px;
}


.next_vid_header {
    font-weight: 400;
    font-size: 1rem;
    color: white;

    margin: 0;
}

.next_vid_sublabel {
    font-weight: 300;
    font-size: 0.8rem;
    color: rgb(168, 168, 168);
    margin: 0;
}

.next_vid_interactions {
    display: flex;
    align-items: center;
    justify-content: left;
    gap: 10px;

    margin-top: 8px;
}

.next_vid_interactions>span {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 3px;
    font-size: 0.7rem;
}

.browse-trailer_text {
    margin-left: 15px;
    font-weight: 700;
    font-size: 1.4rem;
    color: white;

    cursor: pointer;
}

.browse-trailer_text:hover {
    color: rgb(255, 208, 0);
}

/* Anims */

.slide-left {
    animation: slideLeft;
    animation-duration: 400ms;
}

@keyframes slideLeft {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

